package main

import (
	"bufio"
	"fmt"
	"os"
	"path/filepath"
	"strings"
	"text/template"
)

// ServiceConfig æœåŠ¡é…ç½®
type ServiceConfig struct {
	ServiceName   string // æœåŠ¡åç§°ï¼Œå¦‚ user
	ServiceTitle  string // æœåŠ¡æ ‡é¢˜ï¼Œå¦‚ User
	ModulePath    string // Go æ¨¡å—è·¯å¾„
	Port          int    // gRPC ç«¯å£
	HTTPPort      int    // HTTP ç«¯å£(ç”¨äºå¥åº·æ£€æŸ¥)
	DatabaseType  string // æ•°æ®åº“ç±»å‹: postgres, mongodb, none
	DatabaseName  string // æ•°æ®åº“åç§°
	TableName     string // è¡¨åç§°(PostgreSQL)
	RedisDB       int    // Redis DB
	CachePrefix   string // ç¼“å­˜å‰ç¼€
}

func main() {
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘   uyou API Gateway - æœåŠ¡ç”Ÿæˆå™¨       â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Println()

	// 1. æ”¶é›†ç”¨æˆ·è¾“å…¥
	config := collectInput()

	// 2. ç¡®è®¤é…ç½®
	if !confirmConfig(config) {
		fmt.Println("âŒ å·²å–æ¶ˆ")
		return
	}

	// 3. ç”ŸæˆæœåŠ¡
	if err := generateService(config); err != nil {
		fmt.Printf("âŒ ç”Ÿæˆå¤±è´¥: %v\n", err)
		os.Exit(1)
	}

	fmt.Println()
	fmt.Println("âœ… æœåŠ¡ç”ŸæˆæˆåŠŸï¼")
	printNextSteps(config)
}

// collectInput æ”¶é›†ç”¨æˆ·è¾“å…¥
func collectInput() *ServiceConfig {
	reader := bufio.NewReader(os.Stdin)
	config := &ServiceConfig{}

	// æœåŠ¡åç§°
	config.ServiceName = strings.ToLower(readInput(reader, "æœåŠ¡åç§° (å¦‚ user, order, product)", "user"))
	config.ServiceTitle = strings.Title(config.ServiceName)

	// Go æ¨¡å—è·¯å¾„
	defaultModule := fmt.Sprintf("github.com/yeegeek/uyou-%s-service", config.ServiceName)
	config.ModulePath = readInput(reader, "Go æ¨¡å—è·¯å¾„", defaultModule)

	// gRPC ç«¯å£
	portStr := readInput(reader, "gRPC ç«¯å£", "50051")
	fmt.Sscanf(portStr, "%d", &config.Port)
	config.HTTPPort = config.Port + 1000 // HTTP ç«¯å£ = gRPC ç«¯å£ + 1000

	// æ•°æ®åº“ç±»å‹
	fmt.Println()
	fmt.Println("é€‰æ‹©æ•°æ®åº“ç±»å‹:")
	fmt.Println("  1. PostgreSQL (é€‚åˆå¼ºä¸€è‡´æ€§åœºæ™¯: ç”¨æˆ·ã€è®¢å•ã€æ”¯ä»˜)")
	fmt.Println("  2. MongoDB    (é€‚åˆé«˜åååœºæ™¯: åŠ¨æ€ã€æ—¥å¿—ã€æ¶ˆæ¯)")
	fmt.Println("  3. None       (æ— æ•°æ®åº“, ä»…ä½¿ç”¨ Redis æˆ–å¤–éƒ¨ API)")
	dbChoice := readInput(reader, "è¯·é€‰æ‹© [1/2/3]", "1")

	switch dbChoice {
	case "1":
		config.DatabaseType = "postgres"
		config.DatabaseName = readInput(reader, "æ•°æ®åº“åç§°", config.ServiceName+"db")
		config.TableName = readInput(reader, "ä¸»è¡¨åç§°", config.ServiceName+"s")
	case "2":
		config.DatabaseType = "mongodb"
		config.DatabaseName = readInput(reader, "æ•°æ®åº“åç§°", config.ServiceName+"db")
	case "3":
		config.DatabaseType = "none"
	default:
		config.DatabaseType = "postgres"
		config.DatabaseName = config.ServiceName + "db"
		config.TableName = config.ServiceName + "s"
	}

	// Redis é…ç½®
	redisDBStr := readInput(reader, "Redis DB (0-15)", "0")
	fmt.Sscanf(redisDBStr, "%d", &config.RedisDB)
	config.CachePrefix = readInput(reader, "ç¼“å­˜å‰ç¼€", config.ServiceName)

	return config
}

func readInput(reader *bufio.Reader, prompt, defaultValue string) string {
	if defaultValue != "" {
		fmt.Printf("%s [%s]: ", prompt, defaultValue)
	} else {
		fmt.Printf("%s: ", prompt)
	}
	input, _ := reader.ReadString('\n')
	input = strings.TrimSpace(input)
	if input == "" {
		return defaultValue
	}
	return input
}

func confirmConfig(config *ServiceConfig) bool {
	fmt.Println()
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘           é…ç½®ç¡®è®¤                     â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Printf("æœåŠ¡åç§°:   %s\n", config.ServiceName)
	fmt.Printf("æ¨¡å—è·¯å¾„:   %s\n", config.ModulePath)
	fmt.Printf("gRPC ç«¯å£:  %d\n", config.Port)
	fmt.Printf("HTTP ç«¯å£:  %d\n", config.HTTPPort)
	
	switch config.DatabaseType {
	case "postgres":
		fmt.Printf("æ•°æ®åº“:     PostgreSQL (%s)\n", config.DatabaseName)
		fmt.Printf("è¡¨åç§°:     %s\n", config.TableName)
	case "mongodb":
		fmt.Printf("æ•°æ®åº“:     MongoDB (%s)\n", config.DatabaseName)
	case "none":
		fmt.Printf("æ•°æ®åº“:     æ— \n")
	}
	
	fmt.Printf("Redis DB:   %d\n", config.RedisDB)
	fmt.Printf("ç¼“å­˜å‰ç¼€:   %s\n", config.CachePrefix)
	fmt.Println()

	reader := bufio.NewReader(os.Stdin)
	confirm := readInput(reader, "ç¡®è®¤ç”Ÿæˆ? (y/n)", "y")
	return strings.ToLower(confirm) == "y"
}

func generateService(config *ServiceConfig) error {
	// ç¡®å®šæœåŠ¡ç›®å½•
	cwd, _ := os.Getwd()
	var serviceDir string
	if filepath.Base(cwd) == "scaffold" {
		serviceDir = filepath.Join("../services", config.ServiceName+"-service")
	} else {
		serviceDir = filepath.Join("services", config.ServiceName+"-service")
	}

	fmt.Printf("ğŸ“ åˆ›å»ºç›®å½•: %s\n", serviceDir)

	// åˆ›å»ºç›®å½•ç»“æ„
	dirs := []string{
		"cmd/server",
		"internal/handler",
		"internal/service",
		"internal/repository",
		"internal/model",
		"pkg/config",
		"pkg/logger",
		"api/proto",
		"config",
	}

	for _, dir := range dirs {
		fullPath := filepath.Join(serviceDir, dir)
		if err := os.MkdirAll(fullPath, 0755); err != nil {
			return fmt.Errorf("åˆ›å»ºç›®å½•å¤±è´¥ %s: %w", fullPath, err)
		}
	}

	// ç”Ÿæˆæ–‡ä»¶
	fmt.Println("ğŸ“ ç”Ÿæˆæ–‡ä»¶...")
	
	if err := generateGoMod(serviceDir, config); err != nil {
		return err
	}
	if err := generateMakefile(serviceDir, config); err != nil {
		return err
	}
	if err := generateDockerfile(serviceDir, config); err != nil {
		return err
	}
	if err := generateDockerCompose(serviceDir, config); err != nil {
		return err
	}
	if err := generateProto(serviceDir, config); err != nil {
		return err
	}
	if err := generateMain(serviceDir, config); err != nil {
		return err
	}
	if err := generateConfig(serviceDir, config); err != nil {
		return err
	}
	if err := generateReadme(serviceDir, config); err != nil {
		return err
	}
	if err := generateGitignore(serviceDir); err != nil {
		return err
	}

	return nil
}

func generateGoMod(serviceDir string, config *ServiceConfig) error {
	content := fmt.Sprintf(`module %s

go 1.21

require (
	github.com/redis/go-redis/v9 v9.5.1
	github.com/spf13/viper v1.18.2
	go.uber.org/zap v1.27.0
	google.golang.org/grpc v1.60.0
	google.golang.org/protobuf v1.32.0
`, config.ModulePath)

	if config.DatabaseType == "postgres" {
		content += `	github.com/lib/pq v1.10.9
`
	} else if config.DatabaseType == "mongodb" {
		content += `	go.mongodb.org/mongo-driver v1.13.1
`
	}

	content += `)
`
	return os.WriteFile(filepath.Join(serviceDir, "go.mod"), []byte(content), 0644)
}

func generateMakefile(serviceDir string, config *ServiceConfig) error {
	content := fmt.Sprintf(`.PHONY: proto build run test clean docker-build docker-run

# ç”Ÿæˆ Proto ä»£ç 
proto:
	protoc --go_out=. --go_opt=paths=source_relative \
	       --go-grpc_out=. --go-grpc_opt=paths=source_relative \
	       api/proto/*.proto

# æ„å»ºæœåŠ¡
build:
	go build -o bin/%s-service cmd/server/main.go

# è¿è¡ŒæœåŠ¡(æœ¬åœ°å¼€å‘, ä½¿ç”¨ docker-compose å¯åŠ¨æ•°æ®åº“)
run:
	docker compose up -d
	@echo "ç­‰å¾…æ•°æ®åº“å¯åŠ¨..."
	@sleep 3
	go run cmd/server/main.go

# åœæ­¢æœåŠ¡
stop:
	docker compose down

# æµ‹è¯•
test:
	go test -v ./...

# æ¸…ç†
clean:
	rm -rf bin/
	docker compose down -v

# Docker æ„å»º
docker-build:
	docker build -t %s-service:latest .

# Docker è¿è¡Œ
docker-run:
	docker compose up -d
`, config.ServiceName, config.ServiceName)
	return os.WriteFile(filepath.Join(serviceDir, "Makefile"), []byte(content), 0644)
}

func generateDockerfile(serviceDir string, config *ServiceConfig) error {
	content := fmt.Sprintf(`FROM golang:1.21-alpine AS builder

WORKDIR /app

# å¤åˆ¶ä¾èµ–æ–‡ä»¶
COPY go.mod go.sum ./
RUN go mod download

# å¤åˆ¶æºä»£ç 
COPY . .

# æ„å»º
RUN go build -o bin/server cmd/server/main.go

# è¿è¡Œé˜¶æ®µ
FROM alpine:latest

WORKDIR /app

# å®‰è£…è¿è¡Œæ—¶ä¾èµ–
RUN apk --no-cache add ca-certificates

# å¤åˆ¶äºŒè¿›åˆ¶æ–‡ä»¶å’Œé…ç½®
COPY --from=builder /app/bin/server .
COPY --from=builder /app/config ./config

# æš´éœ²ç«¯å£
EXPOSE %d

# å¯åŠ¨æœåŠ¡
CMD ["./server"]
`, config.Port)
	return os.WriteFile(filepath.Join(serviceDir, "Dockerfile"), []byte(content), 0644)
}

func generateDockerCompose(serviceDir string, config *ServiceConfig) error {
	var content string

	switch config.DatabaseType {
	case "postgres":
		content = fmt.Sprintf(`version: '3.8'

services:
  # PostgreSQL æ•°æ®åº“
  postgres:
    image: postgres:15-alpine
    container_name: %s-postgres
    environment:
      POSTGRES_DB: %s
      POSTGRES_USER: postgres
      POSTGRES_PASSWORD: postgres
    ports:
      - "5432:5432"
    volumes:
      - postgres_data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U postgres"]
      interval: 10s
      timeout: 5s
      retries: 5

  # Redis ç¼“å­˜
  redis:
    image: redis:7-alpine
    container_name: %s-redis
    ports:
      - "6379:6379"
    volumes:
      - redis_data:/data

volumes:
  postgres_data:
  redis_data:
`, config.ServiceName, config.DatabaseName, config.ServiceName)

	case "mongodb":
		content = fmt.Sprintf(`version: '3.8'

services:
  # MongoDB æ•°æ®åº“
  mongodb:
    image: mongo:7
    container_name: %s-mongodb
    environment:
      MONGO_INITDB_ROOT_USERNAME: root
      MONGO_INITDB_ROOT_PASSWORD: example
      MONGO_INITDB_DATABASE: %s
    ports:
      - "27017:27017"
    volumes:
      - mongodb_data:/data/db
    healthcheck:
      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
      interval: 10s
      timeout: 5s
      retries: 5

  # Redis ç¼“å­˜
  redis:
    image: redis:7-alpine
    container_name: %s-redis
    ports:
      - "6379:6379"
    volumes:
      - redis_data:/data

volumes:
  mongodb_data:
  redis_data:
`, config.ServiceName, config.DatabaseName, config.ServiceName)

	case "none":
		content = fmt.Sprintf(`version: '3.8'

services:
  # Redis ç¼“å­˜
  redis:
    image: redis:7-alpine
    container_name: %s-redis
    ports:
      - "6379:6379"
    volumes:
      - redis_data:/data

volumes:
  redis_data:
`, config.ServiceName)
	}

	return os.WriteFile(filepath.Join(serviceDir, "docker-compose.yml"), []byte(content), 0644)
}

func generateProto(serviceDir string, config *ServiceConfig) error {
	funcMap := template.FuncMap{
		"lower": strings.ToLower,
		"title": strings.Title,
	}

	tmplText := `syntax = "proto3";

package {{ .ServiceName | lower }};

option go_package = "{{ .ModulePath }}/api/proto";

// {{ .ServiceTitle }} Service
service {{ .ServiceTitle }}Service {
  // åˆ›å»º{{ .ServiceTitle }}
  rpc Create(Create{{ .ServiceTitle }}Request) returns (Create{{ .ServiceTitle }}Response);
  
  // è·å–{{ .ServiceTitle }}
  rpc Get(Get{{ .ServiceTitle }}Request) returns (Get{{ .ServiceTitle }}Response);
  
  // æ›´æ–°{{ .ServiceTitle }}
  rpc Update(Update{{ .ServiceTitle }}Request) returns (Update{{ .ServiceTitle }}Response);
  
  // åˆ é™¤{{ .ServiceTitle }}
  rpc Delete(Delete{{ .ServiceTitle }}Request) returns (Delete{{ .ServiceTitle }}Response);
  
  // åˆ—è¡¨{{ .ServiceTitle }}
  rpc List(List{{ .ServiceTitle }}Request) returns (List{{ .ServiceTitle }}Response);
}

// {{ .ServiceTitle }} å®ä½“
message {{ .ServiceTitle }} {
  int64 id = 1;
  string name = 2;
  int64 created_at = 3;
  int64 updated_at = 4;
}

// åˆ›å»ºè¯·æ±‚
message Create{{ .ServiceTitle }}Request {
  string name = 1;
}

message Create{{ .ServiceTitle }}Response {
  int64 id = 1;
  string message = 2;
}

// è·å–è¯·æ±‚
message Get{{ .ServiceTitle }}Request {
  int64 id = 1;
}

message Get{{ .ServiceTitle }}Response {
  {{ .ServiceTitle }} data = 1;
}

// æ›´æ–°è¯·æ±‚
message Update{{ .ServiceTitle }}Request {
  int64 id = 1;
  string name = 2;
}

message Update{{ .ServiceTitle }}Response {
  bool success = 1;
  string message = 2;
}

// åˆ é™¤è¯·æ±‚
message Delete{{ .ServiceTitle }}Request {
  int64 id = 1;
}

message Delete{{ .ServiceTitle }}Response {
  bool success = 1;
  string message = 2;
}

// åˆ—è¡¨è¯·æ±‚
message List{{ .ServiceTitle }}Request {
  int32 page = 1;
  int32 page_size = 2;
}

message List{{ .ServiceTitle }}Response {
  repeated {{ .ServiceTitle }} items = 1;
  int64 total = 2;
}
`

	tmpl, err := template.New("proto").Funcs(funcMap).Parse(tmplText)
	if err != nil {
		return err
	}

	protoFile := filepath.Join(serviceDir, "api/proto", config.ServiceName+".proto")
	file, err := os.Create(protoFile)
	if err != nil {
		return err
	}
	defer file.Close()

	return tmpl.Execute(file, config)
}

func generateMain(serviceDir string, config *ServiceConfig) error {
	content := fmt.Sprintf(`package main

import (
	"fmt"
	"log"
	"net"

	"google.golang.org/grpc"
)

func main() {
	// å¯åŠ¨ gRPC æœåŠ¡å™¨
	lis, err := net.Listen("tcp", ":%d")
	if err != nil {
		log.Fatalf("failed to listen: %%v", err)
	}

	s := grpc.NewServer()
	// TODO: æ³¨å†ŒæœåŠ¡
	// pb.Register%sServiceServer(s, &server{})

	fmt.Printf("ğŸš€ %s Service å¯åŠ¨åœ¨ç«¯å£ %d\n", config.Port)
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %%v", err)
	}
}
`, config.Port, config.ServiceTitle, config.ServiceTitle)
	return os.WriteFile(filepath.Join(serviceDir, "cmd/server/main.go"), []byte(content), 0644)
}

func generateConfig(serviceDir string, config *ServiceConfig) error {
	var content string

	switch config.DatabaseType {
	case "postgres":
		content = fmt.Sprintf(`server:
  grpc_port: %d
  http_port: %d

database:
  host: localhost
  port: 5432
  user: postgres
  password: postgres
  dbname: %s
  sslmode: disable

redis:
  host: localhost
  port: 6379
  db: %d
  password: ""

log:
  level: info
  format: json
`, config.Port, config.HTTPPort, config.DatabaseName, config.RedisDB)

	case "mongodb":
		content = fmt.Sprintf(`server:
  grpc_port: %d
  http_port: %d

database:
  host: localhost
  port: 27017
  user: root
  password: example
  dbname: %s

redis:
  host: localhost
  port: 6379
  db: %d
  password: ""

log:
  level: info
  format: json
`, config.Port, config.HTTPPort, config.DatabaseName, config.RedisDB)

	case "none":
		content = fmt.Sprintf(`server:
  grpc_port: %d
  http_port: %d

redis:
  host: localhost
  port: 6379
  db: %d
  password: ""

log:
  level: info
  format: json
`, config.Port, config.HTTPPort, config.RedisDB)
	}

	return os.WriteFile(filepath.Join(serviceDir, "config/config.yaml"), []byte(content), 0644)
}

func generateReadme(serviceDir string, config *ServiceConfig) error {
	var dbSection string
	switch config.DatabaseType {
	case "postgres":
		dbSection = "PostgreSQL"
	case "mongodb":
		dbSection = "MongoDB"
	case "none":
		dbSection = "æ— æ•°æ®åº“"
	}

	content := fmt.Sprintf(`# %s Service

%s å¾®æœåŠ¡ - åŸºäº gRPC çš„é«˜æ€§èƒ½æœåŠ¡

## æŠ€æœ¯æ ˆ

- **è¯­è¨€**: Go 1.21+
- **RPC**: gRPC
- **æ•°æ®åº“**: %s
- **ç¼“å­˜**: Redis
- **é…ç½®**: Viper

## å¿«é€Ÿå¼€å§‹

### 1. å®‰è£…ä¾èµ–

`+"```bash"+`
go mod download
`+"```"+`

### 2. ç”Ÿæˆ Proto ä»£ç 

`+"```bash"+`
make proto
`+"```"+`

### 3. å¯åŠ¨æœåŠ¡

`+"```bash"+`
# å¯åŠ¨æ•°æ®åº“å’Œ Redis
make run
`+"```"+`

æœåŠ¡å°†åœ¨ä»¥ä¸‹ç«¯å£å¯åŠ¨:
- gRPC: `+"`%d`"+`
- HTTP: `+"`%d`"+` (å¥åº·æ£€æŸ¥)

### 4. æµ‹è¯•

`+"```bash"+`
# ä½¿ç”¨ grpcurl æµ‹è¯•
grpcurl -plaintext localhost:%d list
`+"```"+`

## é¡¹ç›®ç»“æ„

`+"```"+`
.
â”œâ”€â”€ cmd/
â”‚   â””â”€â”€ server/          # æœåŠ¡å…¥å£
â”œâ”€â”€ internal/
â”‚   â”œâ”€â”€ handler/         # gRPC å¤„ç†å™¨
â”‚   â”œâ”€â”€ service/         # ä¸šåŠ¡é€»è¾‘
â”‚   â”œâ”€â”€ repository/      # æ•°æ®è®¿é—®
â”‚   â””â”€â”€ model/           # æ•°æ®æ¨¡å‹
â”œâ”€â”€ pkg/
â”‚   â”œâ”€â”€ config/          # é…ç½®ç®¡ç†
â”‚   â””â”€â”€ logger/          # æ—¥å¿—
â”œâ”€â”€ api/
â”‚   â””â”€â”€ proto/           # Proto å®šä¹‰
â”œâ”€â”€ config/              # é…ç½®æ–‡ä»¶
â”œâ”€â”€ docker-compose.yml   # æœ¬åœ°å¼€å‘ç¯å¢ƒ
â”œâ”€â”€ Dockerfile           # å®¹å™¨é•œåƒ
â””â”€â”€ Makefile            # æ„å»ºå‘½ä»¤
`+"```"+`

## å¼€å‘æŒ‡å—

### å®šä¹‰ API

ç¼–è¾‘ `+"`api/proto/%s.proto`"+`, å®šä¹‰ä½ çš„ gRPC æœåŠ¡:

`+"```protobuf"+`
service %sService {
  rpc YourMethod(YourRequest) returns (YourResponse);
}
`+"```"+`

### å®ç°ä¸šåŠ¡é€»è¾‘

1. åœ¨ `+"`internal/handler/`"+` å®ç° gRPC å¤„ç†å™¨
2. åœ¨ `+"`internal/service/`"+` å®ç°ä¸šåŠ¡é€»è¾‘
3. åœ¨ `+"`internal/repository/`"+` å®ç°æ•°æ®è®¿é—®

### é…ç½®è·¯ç”±

åœ¨é¡¹ç›®æ ¹ç›®å½•çš„ `+"`apisix/config/routes/`"+` åˆ›å»ºè·¯ç”±é…ç½®:

`+"```yaml"+`
# %s-routes.yaml
routes:
  - uri: /api/v1/%s/*
    upstream:
      nodes:
        "%s-service:%d": 1
      type: roundrobin
    plugins:
      grpc-transcode:
        proto_id: "%s"
        service: "%s.%sService"
        method: "YourMethod"
`+"```"+`

ç„¶ååŒæ­¥åˆ° APISIX:

`+"```bash"+`
cd ../../
make update-routes
`+"```"+`

## éƒ¨ç½²

### Docker

`+"```bash"+`
# æ„å»ºé•œåƒ
make docker-build

# è¿è¡Œ
make docker-run
`+"```"+`

### Kubernetes

TODO: æ·»åŠ  K8s éƒ¨ç½²é…ç½®

## ç¯å¢ƒå˜é‡

| å˜é‡ | è¯´æ˜ | é»˜è®¤å€¼ |
|------|------|--------|
| GRPC_PORT | gRPC ç«¯å£ | %d |
| HTTP_PORT | HTTP ç«¯å£ | %d |
`, 
		config.ServiceTitle,
		config.ServiceTitle,
		dbSection,
		config.Port,
		config.HTTPPort,
		config.Port,
		config.ServiceName,
		config.ServiceTitle,
		config.ServiceName,
		config.ServiceName,
		config.ServiceName,
		config.Port,
		config.ServiceName,
		config.ServiceName,
		config.ServiceTitle,
		config.Port,
		config.HTTPPort,
	)

	if config.DatabaseType == "postgres" {
		content += fmt.Sprintf(`| DB_HOST | æ•°æ®åº“ä¸»æœº | localhost |
| DB_PORT | æ•°æ®åº“ç«¯å£ | 5432 |
| DB_NAME | æ•°æ®åº“åç§° | %s |
`, config.DatabaseName)
	} else if config.DatabaseType == "mongodb" {
		content += fmt.Sprintf(`| DB_HOST | æ•°æ®åº“ä¸»æœº | localhost |
| DB_PORT | æ•°æ®åº“ç«¯å£ | 27017 |
| DB_NAME | æ•°æ®åº“åç§° | %s |
`, config.DatabaseName)
	}

	content += `| REDIS_HOST | Redis ä¸»æœº | localhost |
| REDIS_PORT | Redis ç«¯å£ | 6379 |

## License

MIT
`

	return os.WriteFile(filepath.Join(serviceDir, "README.md"), []byte(content), 0644)
}

func generateGitignore(serviceDir string) error {
	content := `# Binaries
bin/
*.exe
*.dll
*.so
*.dylib

# Test
*.test
*.out

# Go
go.work

# IDE
.vscode/
.idea/
*.swp

# OS
.DS_Store

# Generated
*.pb.go

# Env
.env
.env.local

# Logs
*.log
`
	return os.WriteFile(filepath.Join(serviceDir, ".gitignore"), []byte(content), 0644)
}

func printNextSteps(config *ServiceConfig) {
	fmt.Println()
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘           åç»­æ­¥éª¤                     â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Printf("1. è¿›å…¥æœåŠ¡ç›®å½•:\n")
	fmt.Printf("   cd services/%s-service\n", config.ServiceName)
	fmt.Println()
	fmt.Printf("2. ç¼–è¾‘ Proto æ–‡ä»¶:\n")
	fmt.Printf("   vim api/proto/%s.proto\n", config.ServiceName)
	fmt.Println()
	fmt.Printf("3. ç”Ÿæˆ gRPC ä»£ç :\n")
	fmt.Printf("   make proto\n")
	fmt.Println()
	fmt.Printf("4. å®ç°ä¸šåŠ¡é€»è¾‘:\n")
	fmt.Printf("   - internal/handler/  (gRPC å¤„ç†å™¨)\n")
	fmt.Printf("   - internal/service/  (ä¸šåŠ¡é€»è¾‘)\n")
	fmt.Printf("   - internal/repository/ (æ•°æ®è®¿é—®)\n")
	fmt.Println()
	fmt.Printf("5. å¯åŠ¨æœåŠ¡(åŒ…å«æ•°æ®åº“):\n")
	fmt.Printf("   make run\n")
	fmt.Println()
	fmt.Printf("6. é…ç½® APISIX è·¯ç”±:\n")
	fmt.Printf("   - åœ¨ ../../apisix/config/routes/ åˆ›å»º %s-routes.yaml\n", config.ServiceName)
	fmt.Printf("   - cd ../../ && make update-routes\n")
	fmt.Println()
	fmt.Printf("7. æµ‹è¯• API:\n")
	fmt.Printf("   curl http://localhost:9080/api/v1/%s/...\n", config.ServiceName)
	fmt.Println()
	fmt.Println("ğŸ“– è¯¦ç»†æ–‡æ¡£: README.md")
}
